--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Topic</h1>
 
-<%= render 'form', action: :update, topic: @topic %>
+<%= render 'form', topic: @topic %>
 
 <%= link_to 'Show', @topic %> |
 <%= link_to 'Back', topics_path %>
