--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Topic</h1>
 
-<%= render 'form', action: :create, topic: @topic %>
+<%= render 'form', topic: @topic %>
 
 <%= link_to 'Back', topics_path %>
