--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,4 +11,5 @@
 </p>
 
 <%= link_to 'Edit', edit_topic_path(@topic) %> |
+<%= link_to 'Create Debate', new_topic_debate_path(@topic) %> |
 <%= link_to 'Back', topics_path %>
