Added messages Working on an initial react implementation

--- a/app/views/debates/edit.html.erb
+++ b/app/views/debates/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form', topic: @topic, debate: @debate %>
 
-<%= link_to 'Show', [@topic, @debate] %> |
-<%= link_to 'Back', topic_debates_path(@topic) %>
+<%= link_to 'Show', @debate %> |
