--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -1,9 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Status:</strong>
-  <%= @debate.status %>
-</p>
-
-<%= link_to 'Edit', edit_topic_debate_path(@topic, @debate) %> |
-<%= link_to 'Back', topic_debates_path(@topic) %>
+<%= react_component('Debate', @presenter) %>
